--- a/EE Calculator/Strings/en-us/Resources.resw
+++ b/EE Calculator/Strings/en-us/Resources.resw
@@ -165,4 +165,8 @@
     <value>Personalization</value>
     <comment>Personalization text for Settings</comment>
   </data>
+  <data name="Shell_Help.Content" xml:space="preserve">
+    <value>Help</value>
+    <comment>Navigation view item name for Help</comment>
+  </data>
 </root>
